--- a/accueil/accueil.html
+++ b/accueil/accueil.html
@@ -92,17 +92,10 @@
                         </button>
                         <ul class="sous-menu dropdown-menu">
                             <li><a class="dropdown-item" href="../infrastructure-cuberscurite/infraCyber.html">Infrastructures et cybersécurité</a></li>
-<<<<<<< HEAD
                             <li><a class="dropdown-item" href="../infrastructure-cuberscurite/">Développement d'applications</a></li>
                             <li><a class="dropdown-item" href="../fondamentaux-numerique/fondamentaux-num.html">Fondamentaux numériques</a></li>
                             <li><a class="dropdown-item" href="../cloud-devops/cloud.html">Cloud & Devops</a></li>
                             <li><a class="dropdown-item" href="../Data-IA/">Data & intelligence artificielle</a></li>
-=======
-                            <li><a class="dropdown-item" href="#">Développement d'applications</a></li>
-                            <li><a class="dropdown-item" href="../fondamentaux-numerique/fondamentaux-num.html">Fondamentaux numériques</a></li>
-                            <li><a class="dropdown-item" href="../cloud-devops/cloud.html">Cloud & Devops</a></li>
-                            <li><a class="dropdown-item" href="../Data-IA/dataIa.html">Data & intelligence artificielle</a></li>
->>>>>>> ab7f71a984c2d6ab94b698726f635994d908c3d8
                             <li><a class="dropdown-item" href="../metavers/metaverse.html">Métavers & XR</a></li>
                             <li><a class="dropdown-item" href="../blockchain/blockchain.html">Blockchain</a></li>
                         </ul>
@@ -124,12 +117,8 @@
                         </button>
                         <ul class="sous-menu dropdown-menu">
                             <li><a class="dropdown-item" href="../nos-actions-pour-les-femmes/actionfemme.html">Nos actions pour les femmes</a></li>
-<<<<<<< HEAD
-                            <li><a class="dropdown-item" href="../actions-ressortissants/actions.html">Personnes en situation de handicap</a></li>
-=======
                             <li><a class="dropdown-item" href="#">Personnes en situation de handicap</a></li>
->>>>>>> ab7f71a984c2d6ab94b698726f635994d908c3d8
-                            <li><a class="dropdown-item" href="#">Nos actions pour les refugés étrangers</a></li>
+                            <li><a class="dropdown-item" href="../actions-ressortissants/actions.html">Nos actions pour les refugés étrangers</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
