--- a/former-salariés/former-salarie.html
+++ b/former-salariés/former-salarie.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Programme AWS </title>
+    <title>Fomer  </title>
 
     <!-- Lien booststrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -208,7 +208,8 @@
                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit modi dolorem quis quae animi nihil minus sed unde voluptas cumque.
                   </p>
                   <div class="btn">
-                     <button>Read more</button>
+                    <a href="#" class="fondamentaux-bouton btn">Découvrir la formation</a>
+                     <!-- <button>Read more</button> -->
                   </div>
                </div>
             </div>
