Avant dernier commit

--- a/agile/agile.html
+++ b/agile/agile.html
@@ -74,11 +74,11 @@
                             A Propos
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Qui sommes nous ?</a></li>
-                            <li><a class="dropdown-item" href="#">Notre pédagogie</a></li>
+                            <li><a class="dropdown-item" href="../qui-sommes-nous/qsnous.html">Qui sommes nous ?</a></li>
+                            <li><a class="dropdown-item" href="../pedagogie/pedagogie.html">Notre pédagogie</a></li>
                             <li><a class="dropdown-item" href="#">Notre réseau de fabriques</a></li>
-                            <li><a class="dropdown-item" href="#">Nos actions pour un numérique inclusif</a></li>
-                            <li><a class="dropdown-item" href="#">Anti-FAQ</a></li>
+                            <li><a class="dropdown-item" href="../numerique-inclusif/numeriqueInclusif.html">Nos actions pour un numérique inclusif</a></li>
+                            <li><a class="dropdown-item" href="../anti-faq/antifaq.html">Anti-FAQ</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
@@ -87,13 +87,13 @@
                             Nos Formations
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Infrastructures et cybersécurité</a></li>
+                            <li><a class="dropdown-item" href="../infrastructure-cuberscurite/infraCyber.html">Infrastructures et cybersécurité</a></li>
                             <li><a class="dropdown-item" href="#">Développement d'applications</a></li>
-                            <li><a class="dropdown-item" href="#">Fondamentaux numériques</a></li>
-                            <li><a class="dropdown-item" href="#">Cloud & Devops</a></li>
-                            <li><a class="dropdown-item" href="#">Data & intelligence artificielle</a></li>
-                            <li><a class="dropdown-item" href="#">Métavers & XR</a></li>
-                            <li><a class="dropdown-item" href="#">Blockchain</a></li>
+                            <li><a class="dropdown-item" href="../fondamentaux-numerique/fondamentaux-num.html">Fondamentaux numériques</a></li>
+                            <li><a class="dropdown-item" href="../cloud-devops/cloud.html">Cloud & Devops</a></li>
+                            <li><a class="dropdown-item" href="../Data-IA/dataIa.html">Data & intelligence artificielle</a></li>
+                            <li><a class="dropdown-item" href="../metavers/metaverse.html">Métavers & XR</a></li>
+                            <li><a class="dropdown-item" href="../blockchain/blockchain.html">Blockchain</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
@@ -102,7 +102,7 @@
                             Alternances
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Faire ma formation en alternance</a></li>
+                            <li><a class="dropdown-item" href="../formation-alternance/alternance.html">Faire ma formation en alternance</a></li>
                             <li><a class="dropdown-item" href="#">Recruter en alternance</a></li>
                         </ul>
                     </div>
@@ -112,7 +112,7 @@
                             Candidats
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Nos actions pour les femmes</a></li>
+                            <li><a class="dropdown-item" href="../nos-actions-pour-les-femmes/actionfemme.html">Nos actions pour les femmes</a></li>
                             <li><a class="dropdown-item" href="#">Personnes en situation de handicap</a></li>
                             <li><a class="dropdown-item" href="#">Nos actions pour les refugés étrangers</a></li>
                         </ul>
@@ -390,7 +390,7 @@
                                         Pages
                                     </h4>
                                     <ul class="foot-ul">
-                                        <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                        <li><a href="../devenir-formateur/formateur.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                                     fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                     <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                 </svg>Devenir formateur</a></li>
@@ -399,7 +399,7 @@
                                                         viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Rejoindre notre equipe</a></li>
-                                        <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30"
+                                        <li><a href=""><a href="../blog/blog.html"><svg xmlns="http://www.w3.org/2000/svg" width="30"
                                                         height="30" fill="currentColor" class="bi bi-dot"
                                                         viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
@@ -430,7 +430,7 @@
                                                         viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Accessibilite</a></li>
-                                        <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30"
+                                        <li><a href=""><a href="../mentions-légales/metionlegale.html"><svg xmlns="http://www.w3.org/2000/svg" width="30"
                                                         height="30" fill="currentColor" class="bi bi-dot"
                                                         viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
