--- a/accueil/accueil.html
+++ b/accueil/accueil.html
@@ -114,7 +114,7 @@
                         <ul class="sous-menu dropdown-menu">
                             <li><a class="dropdown-item" href="../nos-actions-pour-les-femmes/actionfemme.html">Nos actions pour les femmes</a></li>
                             <li><a class="dropdown-item" href="#">Personnes en situation de handicap</a></li>
-                            <li><a class="dropdown-item" href="#">Nos actions pour les refugés étrangers</a></li>
+                            <li><a class="dropdown-item" href="../actions-ressortissants/actions.html">Nos actions pour les refugés étrangers</a></li>
                         </ul>
                     </div>
                     <div class="dropdown me-1">
@@ -691,7 +691,7 @@
                                         Pages
                                     </h4>
                                     <ul class="foot-ul">
-                                        <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                        <li><a href="../devenir-formateur/formateur.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                                     fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                     <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                 </svg>Devenir formateur</a></li>
@@ -699,7 +699,7 @@
                                                         fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Rejoindre notre equipe</a></li>
-                                        <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                        <li><a href=""><a href="../blog/blog.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                                         fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Blog</a></li>
@@ -725,7 +725,7 @@
                                                         fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Accessibilite</a></li>
-                                        <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                        <li><a href=""><a href="../mentions-légales/metionlegale.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                                         fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Mention legales</a></li>
