--- a/developpeur-ia/developpeuria.html
+++ b/developpeur-ia/developpeuria.html
@@ -422,7 +422,7 @@
                                         Pages
                                     </h4>
                                     <ul class="foot-ul">
-                                        <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                        <li><a href="../devenir-formateur/formateur.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                                     fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                     <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                 </svg>Devenir formateur</a></li>
@@ -431,7 +431,7 @@
                                                         viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                     </svg>Rejoindre notre equipe</a></li>
-                                        <li><a href=""><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30"
+                                        <li><a href=""><a href="../blog/blog.html"><svg xmlns="http://www.w3.org/2000/svg" width="30"
                                                         height="30" fill="currentColor" class="bi bi-dot"
                                                         viewBox="0 0 16 16">
                                                         <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
