--- a/fondamentaux-numerique/fondamentaux-num.html
+++ b/fondamentaux-numerique/fondamentaux-num.html
@@ -33,7 +33,7 @@
 </head>
 <body>
       <!-- debut header -->
-      <header class="" id="header" class="">
+      <!-- <header class="" id="header" class="">
         <div class="header-top d-flex justify-content-between py-2">
             <div class="section-left d-flex">
                 <div class="media-element"><i class="fa-brands fa-facebook"></i></div>
@@ -165,7 +165,7 @@
             });
         </script>
         
-    </header>
+    </header> -->
     <!-- fin header -->
 
 
