--- a/fondamentaux-numerique/fondamentaux-num.html
+++ b/fondamentaux-numerique/fondamentaux-num.html
@@ -151,7 +151,7 @@
                 hideMenu.style.display = 'block';
                 burgerMenu.style.display = 'none';
             });
-            hideMenu.addEventListener('click', function () {
+            hideMenu.addEventListener('click', function () {s 
                 navMenu.style.left = '200%';
                 hideMenu.style.display = 'none';
                 burgerMenu.style.display = 'block';
