modifications de l'atelier

--- a/Data-IA/dataIa.html
+++ b/Data-IA/dataIa.html
@@ -63,7 +63,7 @@
                     <div class="dropdown me-1">
                         <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
                             data-bs-offset="10,20">
-                            Accueil
+                            <a href="../accueil/accueil.html">Accueil</a>
                         </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
@@ -172,7 +172,7 @@
     <!-- début contenu -->
     <div class="cloud-banniere">
         <h1>Data et intelligence artificielle</h1>
-        <p><span><a href="#">Accueil &nbsp;/</span><span> &nbsp; Nos formations &nbsp;/</span> <span> &nbsp; Data-IA</span></a></p>
+        <p><span><a href="../accueil/accueil.html">Accueil &nbsp;/</span><span> &nbsp; Nos formations &nbsp;/</span> <span> &nbsp; Data-IA</span></a></p>
     </div>
     <div class="cloud-text">
         <h2>C'est quoi le data et l'intelligence artificielle</h2>
