--- a/formation-alternance/alternance.html
+++ b/formation-alternance/alternance.html
@@ -54,14 +54,14 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
                         <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
                             data-bs-offset="10,20">
-                            Accueil
+                            <a href="../accueil/accueil.html">Accueil</a>
                         </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
@@ -168,7 +168,7 @@
         <!-- --début bannière-- -->
         <div class="alternance-banniere">
             <h1>Formation en alternance</h1>
-            <p><span><a href="#">Accueil</a> &nbsp;/</span><span> &nbsp;<a href="#">Alternance</a></span></p>
+            <p><span><a href="../accueil/accueil.html">Accueil</a> &nbsp;/</span><span> &nbsp;<a href="#">Alternance</a></span></p>
         </div>
         <div class="alternance-banniere-carte">
             <div class="alternance-banniere-carte-item">
@@ -354,7 +354,7 @@
             </div>
         </div>
         <div class="alternance-content-three">
-            <h3>COMMENT S'INSCRIRE A NOS FORMATIONS EN ALTERNANCE ?</h3>
+            <h3>Comment s'inscrire à nos formations en alternance ?</h3>
             <div class="alternance-content-three-item">
                 <div class="alternance-content-three-items">
                     <p class="alternance-number">1</p>
