--- a/infrastructure-cuberscurite/infraCyber.html
+++ b/infrastructure-cuberscurite/infraCyber.html
@@ -56,14 +56,14 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
                         <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
                             data-bs-offset="10,20">
-                            Accueil
+                            <a href="../accueil/accueil.html">Accueil</a>
                         </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
@@ -172,7 +172,7 @@
     <!-- début contenu -->
     <div class="cloud-banniere">
         <h1>Infrastructures et cybersecurite</h1>
-        <p><span><a href="#">Accueil &nbsp;/</span><span> &nbsp; Nos formations &nbsp;/</span> <span> &nbsp; Infrastructure et Cybersecurite</span></a></p>
+        <p><span><a href="../accueil/accueil.html">Accueil &nbsp;/</span><span> &nbsp; Nos formations &nbsp;/</span> <span> &nbsp; Infrastructure et Cybersecurite</span></a></p>
     </div>
     <div class="cloud-text">
         <h2>C'est quoi l'infrastructure et cybersecurite</h2>
@@ -199,7 +199,7 @@
                   <h5 class="card-title">Analyse cybersécurité - spécialisation</h5>
                   <p class="card-text">L’analyse cybersécurité est une spécialisation qui permet à un informaticien ou une informaticienne de réaliser la
                 détection d’incidents de sécurité sur un système d’information et de les analyser en cas d’incidents de sécurité.</p>
-                  <a href="#" class="cloud-bouton btn">Découvrir la formation</a>
+                  <a href="../analyse-cybersécurité-spécialisation/cybersecurite.html" class="cloud-bouton btn">Découvrir la formation</a>
                 </div>
               </div>
         </div>
