--- a/mentions-légales/metionlegale.html
+++ b/mentions-légales/metionlegale.html
@@ -42,14 +42,14 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
                         <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
                             data-bs-offset="10,20">
-                            Accueil
+                            <a href="../accueil/accueil.html">Accueil</a>
                         </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
@@ -155,7 +155,7 @@
     <section class="container mlegal">
         <div class="mlegal-banniere">
             <h1>Mention Légale</h1>
-            <p><span><a href="#">Accueil</a> &nbsp;/</span><span> &nbsp; Mention Légale</span></p>
+            <p><span><a href="../accueil/accueil.html">Accueil</a> &nbsp;/</span><span> &nbsp; Mention Légale</span></p>
         </div>
         <div class="mlegal-content">
             <div class="mlegal-content1">
