--- a/nos-actions-pour-les-femmes/actionfemme.html
+++ b/nos-actions-pour-les-femmes/actionfemme.html
@@ -57,14 +57,14 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
                         <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
                             data-bs-offset="10,20">
-                            Accueil
+                            <a href="../accueil/accueil.html">Accueil</a>
                         </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
@@ -175,7 +175,7 @@
     <div class="action-banniere">
         <h1>Femmes</h1>
         <p class="container action-titre">Déterminé.e à favoriser la (trans)formation numérique, inclusive et solidaire, Simplon mène des actions en faveur de la valorisation des femmes dans la tech depuis sa création en 2013.</p>
-        <p class="action-path"><span><a href="#">Accueil</a> &nbsp;/</span><span> &nbsp; Candidats &nbsp;/</span> <span> &nbsp; Nos actions ...</span></p>
+        <p class="action-path"><span><a href="../accueil/accueil.html">Accueil</a> &nbsp;/</span><span> &nbsp; Candidats &nbsp;/</span> <span> &nbsp; Nos actions ...</span></p>
     </div>
     <div class="action-banniere-carte">
         <div class="action-banniere-carte-item">
