--- a/analyse-cybersécurité-spécialisation/cybersecurite.html
+++ b/analyse-cybersécurité-spécialisation/cybersecurite.html
@@ -58,14 +58,14 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
                         <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
                             data-bs-offset="10,20">
-                            Accueil
+                            <a href="../accueil/accueil.html">Accueil</a>
                         </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
@@ -195,7 +195,6 @@
                             <div class="part-ele">
                                 <h3>Spécialisation en analyse cybersécurité</h3>
                                 <p>L’analyse cybersécurité est une spécialisation qui permet à un informaticien ou une informaticienne de réaliser la détection d’incidents de sécurité sur un système d’information et de les analyser en cas d’incidents de sécurité.</p>
-                                <h4>Les compétences visées au cours de cette formation sont les suivantes :</h4>
                                 <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyse des métiers du commanditaire et évaluation globale de la vulnérabilité de son système d’information</span></p>
                                 <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Élaboration et mise en œuvre d’une stratégie de collecte d’événements en provenance du système d’information du commanditaire</span></p>
                                 <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Élaboration de l’analyse des événements de sécurité</span></p>
@@ -251,7 +250,7 @@
                         </div>
                         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
                             <div class="part-ele">
-                                <h4>Les compétences visées au cours de cette formation sont les suivantes :</h4>
+                                <h4>Les compétences visées au cours de cette formation sont les suivantes:</h4>
                                 <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Évaluer la criticité des risques liés aux métiers du commanditaire sur le système d’information</span></p>
                                 <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Analyser l’architecture d’un système d’information et des protocoles de sécurité du commanditaire</span></p>
                                 <p class="list-agile"><i class="fa-solid fa-circle" style="color: #CE0033; font-size: 0.8em;"></i><span>Élaborer une stratégie de collecte d'événements provenant d’un système d’information</span></p>
