--- a/fondamentaux-numerique/fondamentaux-num.html
+++ b/fondamentaux-numerique/fondamentaux-num.html
@@ -56,14 +56,14 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
                         <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
                             data-bs-offset="10,20">
-                            Accueil
+                            <a href="../accueil/accueil.html">Accueil</a>
                         </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
@@ -121,7 +121,7 @@
                             Entreprises
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Former ses salariés</a></li>
+                            <li><a class="dropdown-item" href="">Former ses salariés</a></li>
                         </ul>
                     </div>
                 </div>
@@ -172,7 +172,7 @@
     <!-- début contenu -->
     <div class="fondamentaux-banniere">
         <h1>Fondamentaux Numérique </h1>
-        <p><span><a href="#">Accueil</a> &nbsp;/</span><span> &nbsp; Nos formations &nbsp;/</span> <span> &nbsp; Fondamentaux Numérique</span></p>
+        <p><span><a href="../accueil/accueil.html">Accueil</a> &nbsp;/</span><span> &nbsp; Nos formations &nbsp;/</span> <span> &nbsp; Fondamentaux Numérique</span></p>
     </div>
     <div class="fondamentaux-text">
         <h2>C'est quoi le fondamentaux numérique &nbsp;  &nbsp; </h2>
