--- a/numerique-inclusif/numeriqueInclusif.html
+++ b/numerique-inclusif/numeriqueInclusif.html
@@ -59,14 +59,14 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
                         <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
                             data-bs-offset="10,20">
-                            Accueil
+                            <a href="../accueil/accueil.html">Accueil</a>
                         </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
@@ -214,7 +214,7 @@
         
                 </div>
             </div>
-            <div class="raccoursi mx-4"><a href="">Accueil / </a><a href="">A propos</a></div>
+            <div class="raccoursi mx-4"><a href="../accueil/accueil.html">Accueil / </a><a href="">A propos</a></div>
         </section>
 
 
