--- a/ressortissants/ressortissants.html
+++ b/ressortissants/ressortissants.html
@@ -58,14 +58,14 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
                         <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
                             data-bs-offset="10,20">
-                            Accueil
+                            <a href="../accueil/accueil.html">Accueil</a>
                         </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
@@ -176,7 +176,7 @@
                     perspiciatis aspernatur? Consequuntur distinctio, nulla pariatur consectetur quos nihil molestias quam amet
                     delectus enim deserunt in?</p>
                 <div class="chemin">
-                    <span>Acueil / A propos / Anti-FAQ</span>
+                    <span><a href="../accueil/accueil.html">Accueil</a> / A propos / Anti-FAQ</span>
                 </div>
             </div>
         </div>
