--- a/réseau-de-fabrique/reseau-de-fabrique.html
+++ b/réseau-de-fabrique/reseau-de-fabrique.html
@@ -59,14 +59,14 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
                         <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
                             data-bs-offset="10,20">
-                            Accueil
+                            <a href="../accueil/accueil.html"></a>Accueil
                         </button>
                     </div>
                     <div class="nav-lit dropdown me-1">
