--- a/developpeur appication/dev.html
+++ b/developpeur appication/dev.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cybersecurite</title>
-    <link rel="stylesheet" href="securite.css">
+    <link rel="stylesheet" href="dev.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -51,9 +51,9 @@
                             A Propos
                         </button>
                         <ul class="sous-menu dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Qui sommes nous ?</a></li>
-                            <li><a class="dropdown-item" href="#">Notre pédagogie</a></li>
-                            <li><a class="dropdown-item" href="#">Notre réseau de fabriques</a></li>
+                            <li><a class="dropdown-item" href="../qui-sommes-nous/qsnous.html">Qui sommes nous ?</a></li>
+                            <li><a class="dropdown-item" href="../pedagogie/pedagogie.html">Notre pédagogie</a></li>
+                            <li><a class="dropdown-item" href="..">Notre réseau de fabriques</a></li>
                             <li><a class="dropdown-item" href="#">Nos actions pour un numérique inclusif</a></li>
                             <li><a class="dropdown-item" href="#">Anti-FAQ</a></li>
                         </ul>
@@ -65,11 +65,11 @@
                         </button>
                         <ul class="sous-menu dropdown-menu">
                             <li><a class="dropdown-item" href="#">Infrastructures et cybersécurité</a></li>
-                            <li><a class="dropdown-item" href="#">Développement d'applications</a></li>
+                            <li><a class="dropdown-item" href="../cybersecurite/securite.html">Développement d'applications</a></li>
                             <li><a class="dropdown-item" href="#">Fondamentaux numériques</a></li>
                             <li><a class="dropdown-item" href="#">Cloud & Devops</a></li>
                             <li><a class="dropdown-item" href="#">Data & intelligence artificielle</a></li>
-                            <li><a class="dropdown-item" href="#">Métavers & XR</a></li>
+                            <li><a class="dropdown-item" href="../metavers/metaverse.html">Métavers & XR</a></li>
                             <li><a class="dropdown-item" href="#">Blockchain</a></li>
                         </ul>
                     </div>
@@ -162,7 +162,7 @@
    <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t3.ftcdn.net/jpg/06/41/10/40/240_F_641104054_9XA4MLrmSVGlYEgYTAxjFMPUA3kAAPxQ.jpg">
         <div class="card-body">
           <h5 class="card-title">Developeur euse Front-end</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -182,17 +182,17 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t4.ftcdn.net/jpg/05/86/58/91/240_F_586589179_JoXhkomukeLq9kqSmFP6PiszhNTz6FZa.jpg">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">Intégrer l’accessibilité numérique pour développer des sites inclusifs</h5>
+          <p class="card-text">L'accessibilité numérique constitue également un levier stratégique pour l'élargissement de l'audience d'un site web.</p>
           <button>Decouvrir la Formation</button>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t4.ftcdn.net/jpg/06/17/68/65/240_F_617686587_fYWiYPSWu2Zpfl0rha9Q3QiTfCPgzxRZ.jpg">
         <div class="card-body">
           <h5 class="card-title">Apple fondation progrzmme-Developpement</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -205,40 +205,40 @@
   <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t3.ftcdn.net/jpg/05/48/15/30/240_F_548153052_KWEKUCGUSXzuXUvIWNF8GEZOnIDe2ple.jpg">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Réaliser des applications web à l’aide d’un système de gestion de contenus - CMS</h5>
+          <p class="card-text">Un CMS ou système de gestion de contenu est une plateforme logicielle qui permet de créer, de gérer et de publier du contenu en ligne.</p>
           <button>Decouvrir la Formation</button>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t3.ftcdn.net/jpg/06/08/66/26/240_F_608662653_35jMiib2rOaXCYRZ6Zwzm44HBGrwgPqS.jpg">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Concepteur-rice Développeur-se en environnement DevOps</h5>
+          <p class="card-text">Le Concepteur Développeur-se d'Applications est un-e professionnel-le qui analyse les besoins d'un client, les traduit en exigeances fonctionnelles afin de pouvoir y répondre en développant une solution</p>
           <button>Decouvrir la Formation</button>
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col mb-4">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t4.ftcdn.net/jpg/06/15/90/55/240_F_615905582_ZRwfiX3dM0Aes2qzAEV12S2TS4VnQOcE.jpg">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">SAS de pré-qualification à la formation Développeur-se Web et Web Mobile</h5>
+          <p class="card-text">Le développeur web mobile est un concepteur spécialisé en application mobile.Le développeur web mobile </p>
           <button>Decouvrir la Formation</button>
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col mb-4">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t4.ftcdn.net/jpg/06/35/49/97/240_F_635499722_68t4NSw0wujBHo6k5SyaEcphlu2WLsoS.jpg">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Objects connectés - Spécialisations</h5>
+          <p class="card-text">L'Internet des objets ou IdO est l'interconnexion entre l'Internet et des objets, des lieux et des environnements physiques.L'Internet des objetsLe développeur web mobile</p>
           <button>Decouvrir la Formation</button>
         </div>
       </div>
@@ -248,10 +248,10 @@
   <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t4.ftcdn.net/jpg/06/49/37/65/240_F_649376581_HT89NtGk2RZ5xaUaimm1W9zd4JBBNUio.jpg">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Advanced Appie Fondation Program-Concepteur-rice developpeur-euse </h5>
+          <p class="card-text">Le concepteur developpeur d'application conçcoit et  developpe des services numeriques à dstinations des utilisateur en respectant les normes et les standars  reconnus par la profession </p>
           <button>Decouvrir la Formation</button>
 
         </div>
@@ -259,32 +259,32 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t4.ftcdn.net/jpg/06/18/76/73/240_F_618767377_AYbIRC4MeoPEsXvx1MwINqGYJsAFO7u2.jpg">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Pepa web refugeek</h5>
+          <p class="card-text">Prepe web refuge est une formation en ligne gratuite pour les refigies et les demandeurs d'agile qui souhaitent les comptences de bases en developpement web ainsi à ameliore les leut vie professionnelle. Prepe web refuge est une formation en ligne gratuite</p>
           <button>Decouvrir la Formation</button>
 
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col mt-2">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t4.ftcdn.net/jpg/06/41/10/41/240_F_641104140_lkHlULzw6I1zwaN4I2I3SN3UNHVmawNW.jpg">
         <div class="card-body">
-          <h5 class="card-title">Card t</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">Developpeur-se web et mobile</h5>
+          <p class="card-text">Le developpement web et web mobile consiste à créer des sites web et des applications mobiles à l'aide des langages de programmmions tels que HTML, CSS, JAVASCRIPT, PHP</p>
           <button>Decouvrir la Formation</button>
 
         </div>
       </div>
     </div>
-    <div class="col">
+    <div class="col mt-1">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t4.ftcdn.net/jpg/06/43/48/97/240_F_643489735_0rDGc7OKrivcJnBIrSselmp2yMsn5SMV.jpg">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Developpeur-s COBOL</h5>
+          <p class="card-text">un developpeur  COBOL est un professionnel de l'informatique qui crée; maintient des programmes informatiques en utilisant le langage de programmtion COBOL </p>
             <button>Decouvrir la Formation</button>
         </div>
     </div>
