--- a/metavers/metaverse.html
+++ b/metavers/metaverse.html
@@ -151,21 +151,21 @@
         <!-- <img src="https://extranet.adnov.fr/image/212/72e5aef45180ba51eb1518a1c9f52747.jpeg" alt=""> -->
     </main>
     <div class="action">
-        <h4>C'est quoi le Developpement d'application</h4>
+        <h4>C'est quoi le Metaverse Et XR</h4>
         <img src="../public/image/sim-removebg-preview (1).png" alt="">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ad delectus iusto
-         accusamus reprehenderit quos eum veritatis incidunt, fuga inventore et facilis animi 
-         fugit quidem nihil sapiente adipisci. Eius, molestiae  accusamus reprehenderit quos eum veritatis incidunt, fuga inventore et facilis animi 
-         fugit quidem nihil sapiente adipisci. Eius, molestiae.</p>
+        <p>Le metaverse (contraction de "méta" et "univers", c'est-à-dire méta-univers)
+           est un réseau d'environnements virtuels toujours actifs dans lequel de nombreuses
+           personnes peuvent interagir entre elles et avec ces objets numériques tout en exploitant
+           des représentations virtuelles - ou avatars- d'elles-mêmes.</p>
     </div>
-   <div class="text"><span>LeMtaverse offre 2 formation</span></div> 
+   <div class="text"><span>Le Metaverse  offre 2 formation</span></div> 
             <div class="container w-75 ml-2 mt-5">
    <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://t4.ftcdn.net/jpg/06/50/73/03/360_F_650730346_66lBpF63H5EqxqSso2u3sRTBtf92XvxO.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Developeur euse Front-end</h5>
+          <h5 class="card-title">Technicien-ne d'assistance en Réalité Virtuelle</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <button>Decouvrir la Formation</button>
         </div>
@@ -173,10 +173,10 @@
     </div>
     <div class="col">
       <div class="card">
-        <img src="https://uploads-ssl.webflow.com/601057763f823a0bf65a8071/60acd2e17b456d11114e1b94_Article%20Cybersecurite.png" class="card-img-top" alt="...">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQejpMbiRrru8Y9C9hqLtjTg3t1Jlr4sGOdvQ&usqp=CAU">
         <div class="card-body">
-          <h5 class="card-title">Concepteur-rice developpeur-euse d'application</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">Technicien-ne d'assistance en Réalité Virtuelle/Réalité Augmenté -3D temps réeel</h5>
+          <p class="card-text">This is below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <button>Decouvrir la Formation</button>
         </div>
       </div>
