--- a/Data-IA/dataIa.html
+++ b/Data-IA/dataIa.html
@@ -29,6 +29,7 @@
             <link rel="stylesheet" href="../header-footer/header.css">
             <link rel="stylesheet" href="../style/style.css">
             <link rel="stylesheet" href="../header-footer/footer.css">
+            <link rel="stylesheet" href="../header-footer/header.css">
     <title>Document</title>
 </head>
 <body>
@@ -73,8 +74,8 @@
                         </button>
                         <ul class="sous-menu dropdown-menu">
                             <li><a class="dropdown-item" href="../qui-sommes-nous/qsnous.html">Qui sommes nous ?</a></li>
-                            <li><a class="dropdown-item" href="#">Notre pédagogie</a></li>
-                            <li><a class="dropdown-item" href="#">Notre réseau de fabriques</a></li>
+                            <li><a class="dropdown-item" href="../pedagogie/pedagogie.html">Notre pédagogie</a></li>
+                            <li><a class="dropdown-item" href="../réseau-de-fabrique/reseau-de-fabrique.html">Notre réseau de fabriques</a></li>
                             <li><a class="dropdown-item" href="#">Nos actions pour un numérique inclusif</a></li>
                             <li><a class="dropdown-item" href="#">Anti-FAQ</a></li>
                         </ul>
@@ -86,11 +87,11 @@
                         </button>
                         <ul class="sous-menu dropdown-menu">
                             <li><a class="dropdown-item" href="#">Infrastructures et cybersécurité</a></li>
-                            <li><a class="dropdown-item" href="#">Développement d'applications</a></li>
+                            <li><a class="dropdown-item" href="../cybersecurite/securite.html">Développement d'applications</a></li>
                             <li><a class="dropdown-item" href="#">Fondamentaux numériques</a></li>
                             <li><a class="dropdown-item" href="../cloud-devops/cloud.html">Cloud & Devops</a></li>
                             <li><a class="dropdown-item" href="#">Data & intelligence artificielle</a></li>
-                            <li><a class="dropdown-item" href="#">Métavers & XR</a></li>
+                            <li><a class="dropdown-item" href="../metavers/metaverse.html">Métavers & XR</a></li>
                             <li><a class="dropdown-item" href="../blockchain/blockchain.html">Blockchain</a></li>
                         </ul>
                     </div>
