--- a/Programme-AWS/programme.html
+++ b/Programme-AWS/programme.html
@@ -58,15 +58,15 @@
         </div>
         <div class="header-bottom d-flex justify-content-between align-items-center py-1">
             <div class="logo">
-                <img src="../public/logo/logo.png" alt="">
+                <a href="../accueil/accueil.html"><img src="../public/logo/logo.png" alt=""></a>
             </div>
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
-                        <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
-                            data-bs-offset="10,20">
-                            Accueil
-                        </button>
+                        <a href="../accueil/accueil.html"><button type="button" class="menu-select " data-bs-toggle="dropdown"
+                                aria-expanded="false" data-bs-offset="10,20">
+                                Accueil
+                            </button></a>
                     </div>
                     <div class="nav-lit dropdown me-1">
                         <button type="button" class="menu-select  dropdown-toggle" data-bs-toggle="dropdown"
