--- a/anti-faq/antifaq.html
+++ b/anti-faq/antifaq.html
@@ -63,10 +63,10 @@
             <div class="menu d-flex">
                 <div class="nav-menu d-flex" id="nav-menu">
                     <div class="dropdown me-1">
-                        <button type="button" class="menu-select " data-bs-toggle="dropdown" aria-expanded="false"
-                            data-bs-offset="10,20">
-                            Accueil
-                        </button>
+                        <a href="../accueil/accueil.html"><button type="button" class="menu-select " data-bs-toggle="dropdown"
+                                aria-expanded="false" data-bs-offset="10,20">
+                                Accueil
+                            </button></a>
                     </div>
                     <div class="nav-lit dropdown me-1">
                         <button type="button" class="menu-select  dropdown-toggle" data-bs-toggle="dropdown"
@@ -342,7 +342,7 @@
                                         Pages
                                     </h4>
                                     <ul class="foot-ul">
-                                        <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
+                                        <li><a href="../devenir-formateur/formateur.html"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
                                                     fill="currentColor" class="bi bi-dot" viewBox="0 0 16 16">
                                                     <path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z" />
                                                 </svg>Devenir formateur</a></li>
